--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
 
 		<div class="footer-col">
 			<h3>Locate Us</h3>
-			<li><a href="https://www.google.com/maps/place/Barangay+Sankanan/@8.320363,124.7785351,12z/data=!4m10!1m2!2m1!1ssankanan,+manolo+fortich,+bukidnon+barangay+Hall!3m6!1s0x32ff97e1729d3015:0x3cb2b7f5c93029df!8m2!3d8.3148323!4d124.8587514!15sCjBzYW5rYW5hbiwgbWFub2xvIGZvcnRpY2gsIGJ1a2lkbm9uIGJhcmFuZ2F5IEhhbGySARBjb21tdW5pdHlfY2VudGVyqgFqEAEqESINYmFyYW5nYXkgaGFsbCggMh8QASIbpu2v2DvyIt5sJYtmqNEoepUL5aue95V2QFh-MjIQAiIuc2Fua2FuYW4gbWFub2xvIGZvcnRpY2ggYnVraWRub24gYmFyYW5nYXkgaGFsbOABAA!16s%2Fg%2F11bz0dv_d5?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">ALS Manolo Maps</a></li>
+			<li><a href="https://www.google.com/maps/place/Barangay+Sankanan/@8.320363,124.7785351,12z/data=!4m10!1m2!2m1!1ssankanan,+manolo+fortich,+bukidnon+barangay+Hall!3m6!1s0x32ff97e1729d3015:0x3cb2b7f5c93029df!8m2!3d8.3148323!4d124.8587514!15sCjBzYW5rYW5hbiwgbWFub2xvIGZvcnRpY2gsIGJ1a2lkbm9uIGJhcmFuZ2F5IEhhbGySARBjb21tdW5pdHlfY2VudGVyqgFqEAEqESINYmFyYW5nYXkgaGFsbCggMh8QASIbpu2v2DvyIt5sJYtmqNEoepUL5aue95V2QFh-MjIQAiIuc2Fua2FuYW4gbWFub2xvIGZvcnRpY2ggYnVraWRub24gYmFyYW5nYXkgaGFsbOABAA!16s%2Fg%2F11bz0dv_d5?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">ALS Sankanan Maps</a></li>
 
 		<div class="copyright">
 			<p>Copyright @ 2022 All rights reserved | This template is made by Me</p>
