--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 			<div class="fea-box">
 				<i class="fa-solid fa-book-bookmark"></i>
 				<h3>Stay informed and connected. Follow us on [Social Media Platform]</h3>
-				<p>Facebook: ALS_DAhilayanCLC@facebook.com</p>
+				<p>Facebook: https://www.facebook.com/ma.young.52206</p>
 				<p>Gmail: modestomalourdes@gmail.com</p>
 			</div>
 
