--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 			<div class="fea-box">
 				<i class="fas fa-graduation-cap"></i>
 				<h3>Address:</h3>
-				<p>Zone2, Dahilayan, Manolo Fortich, Bukidnon </p>
+				<p>Zone 2, Sankanan, Manolo Fortich, Bukidnon </p>
 			</div>
 
 			<div class="fea-box">
